# smart-pricing360

./: .gitignore  Documentation_template.md  NAMING_CONVENTIONS.md  OUTPUT_FORMAT_VALIDATION.md  organize_outputs.py  pyproject.toml
notebooks/: 01_mm_all.ipynb  01_mm_fast_v2.ipynb  02_mm_streamlined.ipynb  03_mm_minimal.ipynb
src/data/: load.py
src/features/: text_tabular.py
src/training/: metrics.py
src/utils/: device.py  seed.py
