[tool.poetry]
name = "smart-pricing"
version = "0.1.0"
description = "Multimodal (text+image) price prediction with tiny HF models on MPS"
authors = ["Adya"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
transformers = "4.43.4"
tokenizers = "0.19.1"
sentencepiece = "0.2.0"
sentence-transformers = "3.0.1"
timm = "1.0.9"
pillow = "10.4.0"
scikit-learn = "1.5.2"
xgboost = "2.1.1"
lightgbm = "4.5.0"
catboost = "1.2.7"
pandas = "2.2.2"
numpy = "1.26.4"
scipy = "1.13.1"
tqdm = "4.66.5"
joblib = "1.4.2"
pyarrow = "17.0.0"
python-dotenv = "1.0.1"
ipykernel = "^6.30.1"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
